--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 main {
     display: flex;
-
-
+    background: rgb(0,0,0);
+background: linear-gradient(333deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.8410714627647934) 50%, rgba(23,23,23,0.8494748241093313) 100%);
 }
 
 .side-bar {
@@ -20,7 +20,6 @@ main {
 .artist-container{
     height: calc(100vh - 80px);
     width: 100%;
-    background-color: black;
     padding: 50px 100px;
     position: relative;
     padding-top: 100px;
