--- a/style.css
+++ b/style.css
@@ -1,55 +1,141 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
+
 
 
 main {
+    width: 100%;
     display: flex;
     background: rgb(0,0,0);
-background: linear-gradient(333deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.8410714627647934) 50%, rgba(23,23,23,0.8494748241093313) 100%);
+    background: linear-gradient(333deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.8410714627647934) 50%, rgba(23,23,23,0.8494748241093313) 100%);
+}
+
+nav {
+    display: none;
 }
 
 .side-bar {
-    width: 180px;
-    background-color: blue;
+    width: 80px;
+    background-color: rgba(0, 0, 0, 0.4);
     flex-shrink: 0;
 }
+
+.img-logo {
+    padding: 20px 10px;
+    text-align: center;
+}
+
+.text-logo{
+    display: none;
+}
+
+.img-logo img {
+    width: 50px;
+    height: 50px;
+}
+
+.fas {
+    padding-bottom: 10px;
+}
+
+.icon {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.icon i {
+    padding: 10px 0;
+}
+
+.icon-top {
+    color: #fff;
+}
+
+.icon-down {
+    color: #fff;
+
+}
+
+.title {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    color: #fff;
+    font-size: 18px;
+    letter-spacing: 3px;
+}
+
 
 .artist-container{
     height: calc(100vh - 80px);
     width: 100%;
-    padding: 50px 100px;
-    position: relative;
-    padding-top: 100px;
+    padding: 50px 20px;
+    padding-top: 20px;
     overflow: auto;
+
+
+
+}
+
+.box-img{
+    width: 100%;
+    padding: 10px auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+
+    flex-grow: 1;
+
+
 }
 
 .artist-img {
-float: left;
-padding: 40px 40px;
+padding: 0 auto;
+text-align: center;
+padding-bottom: 50px;
 }
 
 .img-circle {
     border-radius:50%;
 }
 
-img {
+.artist-img img {
     width: 200px;
     height: 200px;
 }
 
-footer {
+.my-footer {
     height: 80px;
-    background-color: grey;;
+    background-color: grey;
     display: flex;
     justify-content: space-between;
 }
 
 .footer-left{
     width: 300px;
-    background-color: red;
+    height: 80px;
+
+}
+
+.mini-img{
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.mini-img img {
+    width: 60px;
+    height: 60px;
 }
 
 .footer-center {
@@ -58,5 +144,88 @@ footer {
 }
 .footer-right {
     width: 300px;
-    background-color: red;
+}
+
+
+@media screen and (min-width: 768px) {
+    .side-bar {
+        width: 200px;
+    }
+
+    .text-logo{
+        display: block;
+        margin-top: -70px;
+        padding: 0 5px;
+    }
+
+    .img-logo{
+        display: none;
+    }
+
+
+
+    .artist-img {
+    padding: 40px 40px;
+    padding-left: 0;
+    }
+
+    .title{
+        padding-left: 100px;
+        font-size: 22px;
+    }
+
+    .artist-container{
+        height: calc(100vh - 80px);
+        width: 100%;
+        padding: 50px 40px;;
+        padding-top: 20px;
+        overflow: auto;
+        text-align: left;
+
+    }
+
+    .box-img{
+        padding: 10px 20px;
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
+    .artist-img {
+
+    padding: 40px 40px;
+    }
+
+
+    .hamburger{
+        display: none;
+    }
+
+    nav {
+        display: inline;
+    }
+
+    nav ul{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    nav ul li{
+        display: inline-block;
+        padding: 20px;
+    }
+    nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 14px;
+
+    }
+
+    nav ul li a:hover {
+        text-decoration: none;
+        color: #1DB954;
+
+    }
 }
