--- a/style.css
+++ b/style.css
@@ -87,22 +87,26 @@ nav {
 }
 
 .box-img{
-    width: 100%;
-    padding: 10px auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-grow: 0;
+}
 
-    flex-grow: 1;
 
+
+
+.box-img div{
+flex-grow: 1;
 
 }
 
 .artist-img {
-padding: 0 auto;
-text-align: center;
-padding-bottom: 50px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+
 }
 
 .img-circle {
@@ -110,8 +114,8 @@ padding-bottom: 50px;
 }
 
 .artist-img img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 
 .my-footer {
@@ -162,12 +166,22 @@ padding-bottom: 50px;
         display: none;
     }
 
-
+    .box-img {
+        max-width: 720px;
+    }
 
     .artist-img {
-    padding: 40px 40px;
-    padding-left: 0;
+        width: 50%;
+        text-align: center;
+        margin-bottom: 80px;
+        padding-right: 40px;
     }
+
+    .artist-img img{
+        width: 200px;
+        height: 200px;
+    }
+
 
     .title{
         padding-left: 100px;
@@ -184,17 +198,15 @@ padding-bottom: 50px;
 
     }
 
-    .box-img{
-        padding: 10px 20px;
-    }
+
 
 }
 
 @media screen and (min-width: 1200px) {
-    .artist-img {
+    /* .artist-img {
 
     padding: 40px 40px;
-    }
+    } */
 
 
     .hamburger{
@@ -227,5 +239,20 @@ padding-bottom: 50px;
         text-decoration: none;
         color: #1DB954;
 
+    }
+
+    .box-img{
+        max-width: 1020px;
+        padding: 10px 20px;
+    }
+
+    /* .box-img::after{
+        content: '';
+        flex: auto;
+
+    } */
+
+    .artist-img {
+        width: calc(100% / 4);
     }
 }
