--- a/style.css
+++ b/style.css
@@ -39,12 +39,13 @@ nav {
     height: 50px;
 }
 
-.fas {
+.icon .fas {
     padding-bottom: 10px;
+    font-size: 26px;
 }
 
 .icon {
-    height: 80%;
+    height: calc(100% - 90px);
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -154,6 +155,20 @@ flex-grow: 1;
 @media screen and (min-width: 768px) {
     .side-bar {
         width: 200px;
+    }
+
+    .icon {
+        height: calc(100% - 120px);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding-left: 8px;
+
+    }
+
+    .icon .fas {
+        font-size: 16px;
     }
 
     .text-logo{
