--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #fff;
+}
 
+a:hover{
+    color: #1DB954;
+}
 
 main {
     width: 100%;
@@ -39,13 +46,17 @@ nav {
     height: 50px;
 }
 
+.icon span {
+    display: none;
+}
+
 .icon .fas {
     padding-bottom: 10px;
     font-size: 26px;
 }
 
 .icon {
-    height: calc(100% - 90px);
+    height: calc(100% - 100px);
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -66,13 +77,22 @@ nav {
 
 }
 
+.hamburger{
+    color: #fff;
+}
+
+.hamburger:hover{
+    color: #1DB954;
+}
+
 .title {
     padding-top: 50px;
     padding-bottom: 20px;
     padding-left: 0px;
     color: #fff;
-    font-size: 18px;
+    font-size: 14px;
     letter-spacing: 3px;
+    text-align: center;
 }
 
 
@@ -158,13 +178,17 @@ flex-grow: 1;
     }
 
     .icon {
-        height: calc(100% - 120px);
+        height: calc(100% - 130px);
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
-        padding-left: 8px;
+        padding-left: 18px;
 
+    }
+
+    .icon span {
+        display: inline;
     }
 
     .icon .fas {
@@ -199,8 +223,10 @@ flex-grow: 1;
 
 
     .title{
-        padding-left: 100px;
         font-size: 22px;
+        text-align: left;
+        padding-top: 50px;
+        padding-bottom: 25px;
     }
 
     .artist-container{
@@ -250,11 +276,7 @@ flex-grow: 1;
 
     }
 
-    nav ul li a:hover {
-        text-decoration: none;
-        color: #1DB954;
 
-    }
 
     .box-img{
         max-width: 1020px;
