--- a/style.css
+++ b/style.css
@@ -198,14 +198,16 @@ padding-bottom: 6px;
 
 .footer-center-bottom {
     position: relative;
+    padding-top: 10px;
 }
 
 .footer-center-bottom .bar {
-    padding-top: 10px;
     height: 1px;
     width: 64%;
-    border-bottom: 1px solid #fff;
+    /* border-bottom: 1px solid #fff; */
     margin: 0 auto;
+    background: rgb(29,185,84);
+background: linear-gradient(90deg, rgba(29,185,84,1) 45%, rgba(255,255,255,1) 46%);
 
 }
 
@@ -224,6 +226,18 @@ padding-bottom: 6px;
     position: absolute;
     top: 0;
     right: 5%;
+    font-size: 14px;
+    padding-left: 8px;
+}
+
+.bar span::before{
+    content: "\f111";
+    font-family: "Font Awesome 5 Free";
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    top: 2px;
+    left: 45%;
     font-size: 14px;
     padding-left: 8px;
 }
