--- a/style.css
+++ b/style.css
@@ -184,6 +184,15 @@ padding-bottom: 6px;
     width: 100%;
     background-color: #282828;
 }
+
+.footer-center .fas.fa-random {
+    display: none;
+}
+
+.fas.fa-undo {
+    display: none;
+}
+
 .footer-right {
     width: 300px;
 }
@@ -316,6 +325,18 @@ background: linear-gradient(90deg, rgba(29,185,84,1) 45%, rgba(255,255,255,1) 46
 
     .footer-center-bottom .bar {
         width: 80%;
+    }
+
+    .footer-left-left .fas.fa-random{
+        display: none;
+    }
+
+    .footer-center .fas.fa-random {
+        display: inline;
+    }
+
+    .fas.fa-undo {
+        display: inline;
     }
 
 
