--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ padding-bottom: 6px;
     /* border-bottom: 1px solid #fff; */
     margin: 0 auto;
     background: rgb(29,185,84);
-background: linear-gradient(90deg, rgba(29,185,84,1) 45%, rgba(255,255,255,1) 46%);
+    background: linear-gradient(90deg, rgba(29,185,84,1) 45%, rgba(255,255,255,1) 46%);
 
 }
 
@@ -376,13 +376,32 @@ background: linear-gradient(90deg, rgba(29,185,84,1) 45%, rgba(255,255,255,1) 46
     nav ul li{
         display: inline-block;
         padding: 20px;
+        position: relative;
     }
+
+    nav ul li::after {
+        display:block;
+        content: '';
+        border-bottom: solid 2px #1DB954;
+        transform: scaleX(0);
+        transition: transform 0.19s linear;
+    }
+
+    nav ul li:hover:after {
+        transform: scaleX(1);
+    }
+
     nav ul li a {
         color: #fff;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 14px;
 
+    }
+
+    nav ul li a:hover{
+        color: #fff;
+        /* box-shadow: 0px -1px 3px #1DB954 */
     }
 
 
